--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,6 +22,10 @@ body{
     padding: 0 0 1em;
 }
 
+#cabecera #logo {
+    width: 20px;
+    vertical-align: middle;
+}
 
 #container {
     width: 70%;
